// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package > build() > exports > adds "mjs wrapper" exports for a single cjs format 1`] = `
{
  ".": {
    "node": {
      "import": "./cjs/index-wrapper.mjs",
      "require": "./cjs/index.cjs",
    },
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for a single artifact and format 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": "./lib/index.js",
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for a single artifact and multiple format 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "import": "./mjs/index.mjs",
      "require": "./cjs/index.cjs",
    },
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for bundle and types artifacts in parallel 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": "./lib/index.d.ts",
    },
    "types": "./lib/index.d.ts",
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for multiple artifacts + formats of different output names 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": {
      "import": "./mjs/index.mjs",
      "require": "./cjs/index.cjs",
    },
  },
  "./client": {
    "browser": {
      "default": "./umd/client.js",
      "import": "./esm/client.js",
      "module": "./esm/client.js",
    },
    "default": "./lib/client.js",
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for multiple artifacts + formats of the same output name 1`] = `
{
  ".": {
    "browser": {
      "default": "./umd/index.js",
      "import": "./esm/index.js",
      "module": "./esm/index.js",
    },
    "default": "./lib/index.js",
    "node": {
      "import": "./mjs/index.mjs",
      "require": "./cjs/index.cjs",
    },
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for multiple artifacts of different output names 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": "./lib/index.js",
  },
  "./client": {
    "browser": "./lib/client.js",
    "default": "./lib/client.js",
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for multiple artifacts of the same output name 1`] = `
{
  ".": {
    "browser": "./lib/browser/index.js",
    "default": "./lib/native/index.js",
    "node": "./lib/node/index.js",
    "react-native": "./lib/native/index.js",
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > adds exports for multiple artifacts with different bundle types 1`] = `
{
  ".": {
    "browser": {
      "import": "./esm/index.js",
      "module": "./esm/index.js",
      "types": "./esm/index.d.ts",
    },
    "default": "./lib/index.js",
    "node": {
      "default": "./lib/index.js",
      "types": "./lib/index.d.ts",
    },
    "types": "./lib/index.d.ts",
  },
  "./package.json": "./package.json",
  "./utils": {
    "browser": {
      "import": "./esm/utils.js",
      "module": "./esm/utils.js",
      "types": "./esm/utils/index.d.ts",
    },
    "default": "./lib/utils/index.js",
    "node": {
      "default": "./lib/utils/index.js",
      "types": "./lib/utils/index.d.ts",
    },
    "types": "./lib/utils/index.d.ts",
  },
}
`;

exports[`Package > build() > exports > merges with existing exports 1`] = `
{
  ".": {
    "default": "./lib/index.js",
    "node": "./lib/index.js",
  },
  "./foo": "./lib/foo.js",
  "./package.json": "./package.json",
}
`;

exports[`Package > build() > exports > supports dual cjs/mjs exports 1`] = `
{
  ".": {
    "node": {
      "import": "./mjs/index.mjs",
      "require": "./cjs/index.cjs",
    },
  },
  "./package.json": "./package.json",
}
`;

exports[`Package > setConfigs() > errors if input name contains a slash 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo/bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")]
`;

exports[`Package > setConfigs() > errors if input name contains a space 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "inputs". Invalid key "foo bar". String does not match. (pattern "^[a-zA-Z0-9-_]+$")]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`browser\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, esm, umd. Received "mjs".]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`native\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, esm. Received "mjs".]
`;

exports[`Package > setConfigs() > errors if invalid format is provided for \`node\` platform 1`] = `
[OptimalError: The following validations have failed for \`flag-common\`:
  - Invalid field "format". String must be one of: lib, mjs, cjs. Received "umd".]
`;
